Add explanations to more functions and add more error handling

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
 PORT=33765
-SITE_KEY=meltdown
+
+# optional for pocketbase
 POCKETBASE_URL=http://127.0.0.1:8090
+SITE_KEY=meltdown
+
+# It's for obfuscating the state and preventing scraping. You could say it's
+# either paranoid or vigilant. For each site it's best to come up with a random
+# sequence of these strings of any length.
+MELTDOWN_STATE1=iNEmQL
+MELTDOWN_STATE2=JW29a4
