--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
-PORT=33765
-
-# optional for pocketbase
-POCKETBASE_URL=http://127.0.0.1:8090
-SITE_KEY=meltdown
+MELTDOWN_PORT=33765
+MELTDOWN_HOST=127.0.0.1
 
 # It's for obfuscating the state and preventing scraping. You could say it's
 # either paranoid or vigilant. For each site it's best to come up with a random
 # sequence of these strings of any length.
 MELTDOWN_STATE1=iNEmQL
 MELTDOWN_STATE2=JW29a4
+
+# should the server generate a search index? (npm run search-index)
+MELTDOWN_SEARCH_INDEX=true
+
+# Build SSG - Static Site Generation static snapshot
+MELTDOWN_SSG=false
