--- a/package.json
+++ b/package.json
@@ -1,43 +1,55 @@
 {
-  "name": "@dex.yachts/meltdown",
+  "name": "meltdown",
+  "description": "meltdown imba site template",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@phosphor-icons/web": "^2.1.1",
-    "@shikijs/rehype": "^1.4.0",
-    "async": "^3.2.5",
-    "dayjs": "^1.11.10",
+    "async": "^3.2.6",
+    "bytes": "^3.1.2",
     "dotenv": "^16.4.5",
+    "esbuild": "^0.24.0",
     "fast-glob": "^3.3.2",
     "front-matter": "^4.0.2",
-    "imba": "^2.0.0-alpha.235",
+    "fuse.js": "^7.0.0",
+    "hast-util-to-html": "^9.0.3",
+    "hast-util-to-mdast": "^10.1.0",
+    "imba": "2.0.0-alpha.237",
     "lodash": "^4.17.21",
-    "nodemon": "^3.1.0",
+    "mdast-util-to-string": "^4.0.0",
+    "mdast-util-toc": "^7.1.0",
+    "mime": "^4.0.4",
+    "ms": "^2.1.3",
+    "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
-    "pocketbase": "^0.21.1",
     "posthtml": "^0.16.6",
-    "qs": "^6.12.0",
-    "rehype-format": "^5.0.0",
-    "rehype-raw": "^7.0.0",
-    "rehype-stringify": "^10.0.0",
+    "qs": "^6.13.0",
+    "rehype-parse": "^9.0.1",
+    "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.0",
-    "restana": "^4.9.7",
-    "superagent": "^8.1.2",
-    "unified": "^11.0.4",
+    "restana": "^4.9.9",
+    "shiki": "^1.22.0",
+    "sirv": "^3.0.0",
+    "slug": "^9.1.0",
+    "superagent": "^10.1.0",
+    "unified": "^11.0.5",
+    "unist-util-map": "^4.0.0",
+    "unist-util-visit": "^5.0.0",
+    "unist-util-visit-parents": "^6.0.1",
     "url-join": "^4.0.1"
   },
   "scripts": {
-    "clean": "rm -rf .tmp dist node_modules/.cache node_modules/imba/.imba-cache",
+    "clean": "rm -rf .tmp .ssg dist node_modules/.cache node_modules/imba/.imba-cache",
     "setup-dirs": "mkdir -p .tmp",
     "setup-routes": "imba run --loglevel error ./tools/build-routes.imba",
+    "setup-search": "echo '[]' > assets/search-index.json",
     "setup": "run-s -s 'setup-*'",
-    "export-content": "imba run tools/export-content.imba",
-    "dev-rebuild-routes": "nodemon -q -d 1 -C -w src/pages --ext imba,js,ts,md --exec 'npm run setup-routes' || true",
-    "dev-server": "imba -w src/server.imba || true",
+    "search-index": "imba tools/build-search-index.imba",
+    "ssg": "imba tools/build-ssg.imba",
+    "dev-rebuild-routes": "nodemon -q -d 1 -C -w src/pages --ext imba,js,ts,md,html --exec 'npm run setup-routes' || true",
+    "dev-server": "imba -w -o dist --loglevel error -s -M src/server.imba || true",
     "dev": "run-s -s setup && run-p -s 'dev-*' || true",
-    "generate": "echo 'todo gen'",
-    "build": "imba build src/server.imba",
-    "start": "run-s -s setup build && node dist/server.js"
+    "start": "run-s -s setup && imba -o dist --loglevel error -S -m -p src/server.imba"
   }
 }
